2012-02-09  Andrey Belevantsev  <abel@ispras.ru>

	Backport from mainline 
	2012-01-20  Andrey Belevantsev  <abel@ispras.ru>

	PR target/51106
	* function.c (instantiate_virtual_regs_in_insn): Use
	delete_insn_and_edges when removing a wrong asm insn.

2012-02-07  Quentin Neill  <quentin.neill@amd.com>

	Backport from mainline:
	2012-01-19  Quentin Neill  <quentin.neill@amd.com>

	PR target/48743
	* config/i386/driver-i386.c (host_detect_local_cpu): Also check
	family to distinguish PROCESSOR_ATHLON.

2012-02-07  Kai Tietz  <ktietz@redhat.com>
            Dave Korn  <dave.korn.cygwin@gmail.com>

	PR target/40068
	* config/i386/winnt-cxx.c (i386_pe_adjust_class_at_definition):
	Take care that typinfo gets dllexport-attribute.

2012-01-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	Backport from mainline:
	2012-01-31  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	config/arm/thumb2.md (thumb2_mov_notscc): Use MVN for true
	condition.

2012-01-20  Eric Botcazou  <ebotcazou@adacore.com>

	* cfgrtl.c (rtl_dump_bb): Do not dump insns for {ENTRY|EXIT}_BLOCK.

2012-01-15  Uros Bizjak  <ubizjak@gmail.com>

	PR rtl-optimization/51821
	* recog.c (peep2_find_free_register): Determine clobbered registers
	from insn pattern.

2012-01-12  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	Backport from mainline:
	2012-01-11  Matthew Gretton-Dann  <matthew.gretton-dann@arm.com>

	* config/arm/arm.md (mov_notscc): Use MVN for false condition.

2012-01-10  Joseph Myers  <joseph@codesourcery.com>

	Revert:

	2008-09-18  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR rtl-opt/37451
	* loop-doloop.c (doloop_modify): New argument zero_extend_p and
	zero extend count after the correction to it is done.
	(doloop_optimize): Update call to doloop_modify, don't zero extend
	count before call.

	2008-11-03  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR rtl-opt/37782
	* loop-doloop.c (doloop_modify): Add from_mode argument that says what